--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" type="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="container-fluid" id="productos">
         <div class="container my-5">
