--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section class="container-fluid" id="productos">
         <div class="container my-5">
             <div class="row gap-2">
-                <div class="col col-lg-12 d-flex" id="store">
+                <div class="col col-sm-12 col-md-6 col-lg-4 d-flex" id="store">
                 <!-- acá aparecen los productos -->
                 </div>
             </div>
