Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </section> -->
 
-    <section class="container-fluid" id="productos">
+    <section class="container-fluid" id="contenedor">
         <div class="container my-5">
             <div class="row gap-2">
                 <div class="col col-sm-12 col-md-6 col-lg-4 d-flex" id="store">
