--- a/index.html
+++ b/index.html
@@ -92,7 +92,15 @@
         </div>
     </section> -->
 
-    <section class="container-fluid" id="contenedor">
+<section class="container-fluid">
+<div class="container">
+<div id="contenedor" class="row gap-2">
+
+</div>
+</div>
+</section>
+
+    <section class="container-fluid" id="productos">
         <div class="container my-5">
             <div class="row gap-2">
                 <div class="col col-sm-12 col-md-6 col-lg-4 d-flex" id="store">
