--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section> -->
 
 <section class="container-fluid">
-<div class="container">
+<div class="container" id="productos">
 <div id="contenedor" class="row gap-2">
 
 </div>
