--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
 
 <section class="container-fluid">
 <div class="container" id="productos">
-<div id="contenedor" class="row gap-2">
+<div class="row">
+<div id="contenedor" class"col-sm-12 col-md-6 col-lg-3">
 
+</div>
 </div>
 </div>
 </section>
