--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <section class="container-fluid">
 <div class="container" id="productos">
 <div class="row">
-<div id="contenedor" class"col-sm-12 col-md-6 col-lg-3">
+<div id="contenedor" class="col-sm-12 col-md-6 col-lg-3">
 
 </div>
 </div>
