--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Grulla site</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="css/style.css" type="stylesheet">
+    <link href="estilo.css">
 </head>
 <body>
+  <div class="texto">hmlkd </div>
     <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -91,16 +93,15 @@
             </div>
         </div>
     </section> -->
-
+<h1>hola</h1>
 <section class="container-fluid">
-<div class="container" id="productos">
-<div id="contenedor" class="row col-sm-12">
+<div class="container">
+<div id="contenedor" class="row row-cols-sm-2 row-cols-md-4 row-cols-lg-4">
 
 </div>
 </div>
 </section>
 
 <script src="js/api.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
