--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Grulla site</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <link href="css/style.css" type="stylesheet">
-    <link href="estilo.css">
+    <style>
+.rojo {
+color: red;
+}
+</style>
 </head>
 <body>
   <div class="texto">aca clase texto</div>
 <h1>hola</h1>
+<p class="rojo">jazmin</p>
 <section class="container-fluid">
 <div class="container">
 <div id="contenedor" class="row row-cols-sm-2 row-cols-md-4 row-cols-lg-4">
