Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ color: red;
 </div>
 </div>
 </section>
-
-<!-- <script src="js/api.js"></script> -->
+<script src="js/api.js"></script>
 </body>
 </html>
