Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section class="container-fluid">
 <div class="container">
-<div id="contenedor" class="row row-cols-sm-2 row-cols-md-4 row-cols-lg-4">
+<div id="contenedor" class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4">
 
 </div>
 </div>
