Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<section class="container-fluid">
+<section class="container-fluid my-5">
 <div class="container">
 <div id="contenedor" class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4">
 
