--- a/carrito.html
+++ b/carrito.html
@@ -40,15 +40,31 @@
             <h3>Carrito</h3>
             <button id="carritoCerrar"><i class="fas fa-times-circle"></i></button>
             <div id="carrito-contenedor">
-                <!-- <div class="productoEnCarrito">
-                    <p>Buzo 1</p>
-                    <p>Precio: $1200</p>
-                    <button class="boton-eliminar"><i class="fas fa-trash-alt"></i></button>
-                </div> -->
+
             </div>
             <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
             <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
         </div>
     </div>
+
+<!-- <div class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div id="carrito-contenedor" class="modal-body">
+        <p>Modal body text goes here.</p>
+        <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
+      </div>
+      <div class="modal-footer">
+        <button id="carritoCerrar" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button id="vaciar-carrito" type="button" class="btn btn-primary">vaciar</button>
+      </div>
+    </div>
+  </div>
+</div> -->
+
 </body>
 </html>
